# cnubot

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: app.py  database.py
backend/app/jobs/: scrape_menus.py
backend/app/routers/: cafeteria.py  help.py  library.py  shuttle.py
backend/app/schemas/: kakao_request.py
backend/app/scrapers/: cnu_food.py  dorm.py  settings.py
backend/app/services/: cafeteria.py  cafeteria_favorites.py  help.py  library.py  menu_reactions.py  shuttle.py
backend/app/static/data/: meal_schedule.json  shuttle_schedule.json
backend/app/utils/: common.py  kakao_json_response.py
backend/tests/: test_cafeteria_favorites.py  test_dorm_scraper.py
etl/: Dockerfile
etl/dags/: common_task.py  dorm_menu_pipeline.py  hall_2_menu_pipeline.py  hall_3_menu_pipeline.py  life_science_menu_pipeline.py  sangrok_menu_pipeline.py  settings.py
etl/data/: dorm_menu.json  hall_2_menu.json  hall_3_menu.json  life_science_menu.json  sangrok_menu.json  shuttle_schedule.json
