[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["조해창 <outofchng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
aiofiles = "^23.2.1"
pytz = "^2024.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
requests = "^2.32.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"